# newsmood

./: README.md  setup.cfg
.github/workflows/: ci.yml
misc/: evaluate_real_embeddings.py  full_evaluation.py  newsmood_wip.ipynb
misc/docs/: PHASE_1_FINDINGS.md
newsmood/: __init__.py  backtest.py  clusters.py  data.py  embed.py  features.py  infer.py  ingest.py  models.py  per_ticker_eval.py  select.py  targets.py  tickers.py
tests/: test_backtest.py  test_clusters.py  test_data.py  test_embed.py  test_features.py  test_infer.py  test_ingest.py  test_models.py  test_per_ticker_eval.py  test_select.py  test_targets.py  test_tickers.py
